Adjusted body and html element CSS to stop them overflowing in the open window

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,7 @@
 html {
     font: 14px arial, sans-serif;
+    height: 100%;
+    width: 100%;
 }
 
 #top-left-navbar {
@@ -64,8 +66,9 @@ a.bottom {
 
 
 #body {
-    height: 100vw;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
+    margin: 0 0 0 0;
     display: flex;
     justify-content: center;
     position: relative;
@@ -73,7 +76,7 @@ a.bottom {
 
 #main {
     position: absolute;
-    top: 10%;
+    top: 20%;
     width: 30%;
     display: grid;
     grid-template-columns: 1fr;
